Correciones en el footer para moviles

--- a/style.css
+++ b/style.css
@@ -415,4 +415,14 @@ footer .link:hover {
   .grid-tools {
     grid-template-columns: 1fr 1fr;
   }
+
+  footer > div {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  footer > div > *:first-child {
+    width: 100%;
+  }
 }
