--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
   --black3-color: #2d2f32;
   --gold-color: #ffc94a;
 
+  --gray-color: #61677a;
+  --gray2-color: #d8d9da;
+
   box-sizing: border-box;
   font-family: var(--title-font);
   color: #fff6e0;
@@ -47,7 +50,8 @@ body {
 
 main {
   max-width: 800px;
-  margin: 150px auto 0px;
+  padding-top: 150px;
+  margin: 0px auto 0px;
 }
 
 h1 {
@@ -136,6 +140,15 @@ ul {
 
 ul li:first {
   margin-top: 0px;
+}
+
+section {
+  padding: 20px 0px 50px;
+  border-top: 2px solid #434445;
+}
+
+section.banner {
+  border: none;
 }
 
 footer ul {
@@ -361,7 +374,6 @@ footer .link:hover {
 @media only screen and (max-width: 1100px) {
   main {
     max-width: 600px;
-    margin: 150px auto 0px;
     padding-left: 50px;
   }
 }
@@ -369,7 +381,8 @@ footer .link:hover {
 @media only screen and (max-width: 720px) {
   main {
     max-width: 90%;
-    margin: 100px auto 0px;
+    margin: 15px auto;
+    padding-top: 150px;
     padding-left: 0px;
   }
 
